<?xml version="1.0" encoding="UTF-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.telebirr.superapp.ui.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/paymentsFragment"
        android:name="com.telebirr.superapp.ui.fragments.PaymentsFragment"
        android:label="@string/nav_payments"
        tools:layout="@layout/fragment_payments" />

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.telebirr.superapp.ui.fragments.ScanFragment"
        android:label="Scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.telebirr.superapp.ui.fragments.TransactionsFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.telebirr.superapp.ui.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
